// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: JavascriptDocs CloseDocs renders 1`] = `
<li>
  <div>
    <h3
      scope="row"
    >
      <code
        className="code-tags code-tags-secondary"
      >
        dg.test.close(&lt;test-id&gt;)
      </code>
    </h3>
    <p
      className="javascript-doc-element-description"
    >
      Closes the given 
      test
    </p>
  </div>
</li>
`;

exports[`Utilities: JavascriptDocs OpenDocs renders 1`] = `
<li>
  <div>
    <h3
      scope="row"
    >
      <code
        className="code-tags code-tags-secondary"
      >
        dg.test.open(&lt;test-id&gt;)
      </code>
    </h3>
    <p
      className="javascript-doc-element-description"
    >
      Opens the given 
      test
    </p>
  </div>
</li>
`;
